--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -24851,6 +24851,12 @@ msgstr ""
 msgid "IssueTracker|Use Bugzilla as this project's issue tracker. %{docs_link}"
 msgstr ""
 
+msgid "IssueTracker|Use ClickUp as this project's issue tracker. %{docs_link}"
+msgstr ""
+
+msgid "IssueTracker|Use Clickup as this project's issue tracker."
+msgstr ""
+
 msgid "IssueTracker|Use IBM Engineering Workflow Management as this project's issue tracker."
 msgstr ""
 
