--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -48591,6 +48591,9 @@ msgstr ""
 msgid "UsageQuota|Month"
 msgstr ""
 
+msgid "UsageQuota|Namespace overview"
+msgstr ""
+
 msgid "UsageQuota|Namespace storage used"
 msgstr ""
 
@@ -48649,6 +48652,9 @@ msgid "UsageQuota|Storage"
 msgstr ""
 
 msgid "UsageQuota|Storage type"
+msgstr ""
+
+msgid "UsageQuota|Storage usage breakdown"
 msgstr ""
 
 msgid "UsageQuota|Storage used"
